# tourism-demand-forecast

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: README.md
data/raw/: air_rpm.csv
reports/: NARRATIVE.md  metrics.json
src/tourism_forecast/: __init__.py  analyze.py  clean.py  forecast.py  ingest.py  pipeline.py
tests/: test_pipeline.py
