[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "tourism-demand-forecast"
version = "0.1.0"
description = "End-to-end seasonal demand forecasting on public U.S. air-travel data, with explicit handling of the COVID structural break."
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Marc Albert" }]
requires-python = ">=3.9"
dependencies = [
  "pandas>=1.5",
  "numpy>=1.23",
  "matplotlib>=3.6",
  "statsmodels>=0.13",
]

[project.optional-dependencies]
dev = ["pytest>=7", "ruff>=0.6", "mypy>=1.8"]

[project.scripts]
tourism-forecast = "tourism_forecast.pipeline:run"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 110
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.9"
files = ["src"]
ignore_missing_imports = true   # pandas, numpy, matplotlib, statsmodels are untyped at import here
warn_redundant_casts = true
no_implicit_optional = true
